--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,17 @@
              <br> https://github.com/pinkflames88/Weather-app </br>
          </footer>
         </div>
+
     </div>
               <script src="src/index.js"></script>
     <script src="src/WeatherSearch.js"></script>
+
+    title>React Weather App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    
     </body>
 </html>
    
